# python-wasi-reactor

./: .gitignore  Cargo.toml  README.md  build.rs  build.sh  deno.ts  install.sh  whiz.yaml
.cargo/: config.toml
deno/: binding_test.ts  common.ts  custom_memory.ts  def.ts  main.ts  memory.ts  module.ts  parallel.ts  test.ts
deno/host_py/: host.py  imp.py
deno/host_py/nested_a/: __init__.py
deno/host_py/nested_a/nested_b/: __init__.py  nested_mod.py
dev/: build.sh  install.sh  lock.sh  test.sh
python/: plugin.py
src/: bindings.rs  defun.rs  export.rs  lambda.rs  lib.rs  main.rs  memory.rs  tests.rs
src/core/: common.rs  defun.rs  lambda.rs  mod.rs  module.rs  rustpy.rs
src/python/: plugin.py
src/python/test/: defun.py
wasmedge/: Cargo.toml
wasmedge/dep/: Cargo.toml
wasmedge/dep/src/: lib.rs
wasmedge/src/: main.rs
wasmedge_reactor/: Cargo.toml
wasmedge_reactor/dep/: Cargo.toml
wasmedge_reactor/src/: lib.rs  main.rs  wasi_vm.rs  wasmedge_sdk_bindgen.rs
