[package]
name = "python-wasi-reactor"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"
lto = true

[dependencies]
pyo3 = { version = "0.18.1", features = ["abi3-py311"] }
pythonize = "0.18.0"
serde_json = "1.0.94"
wasmedge-bindgen-macro = "0.4.1"

[workspace]
members = [
    "wasmedge"
]
