[package]
name = "wasmedge_reactor"
version = "0.1.0"
edition = "2021"

[lib]
name = "wasmedge_reactor"
crate-type = ["cdylib"]

[dependencies]
num-traits = "0.2"
num-derive = "0.3"
wasmedge-sdk = "0.8.1"
wasmedge-sys = "0.13.1"
wasmedge-types = "0.4.1"
anyhow = "1.0.71"
once_cell = "1.18.0"
dashmap = "5.5.0"
deno_bindgen = "0.8.1"
serde = { version = "1.0.171", features = ["derive"] }
